--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 	<head>
 		<title>Zac Shaiken</title>
 		<meta charset="UTF-8">
-		<link rel="stylesheet" href="styles.css"> 
-		<link href='https://fonts.googleapis.com/css?family=Poiret+One|Amatic+SC:700' rel='stylesheet' type='text/css'>
+		<link rel="stylesheet" href="mainstyles.css"> 
+		<link href='https://fonts.googleapis.com/css?family=Amatic+SC:700' rel='stylesheet' type='text/css'>
 	</head>
 
 	<body>
-		<h1>Zac Shaiken</h1>
-		<a href="https://www.linkedin.com/in/zshaiken"><img id="linkedin" src="linkedinIcon.png" alt="www.linkedin.com/in/zshaiken" style="width:50px;height:50px;">
-		<a href="https://www.facebook.com/zshaiken"><img id="facebook" src="facebookIcon.png" alt="www.facebook.com/zshaiken" style="width50px;height:50px;">
-		<a href="https://github.com/shaikezr"><img id="github" src="githubIcon.png" alt="www.github.com/shaikezr" style="width50px;height:50px;">
+		<h1><a href="sinopah.html">Zac Shaiken</a></h1>
+		<a href="https://www.linkedin.com/in/zshaiken"><img id="linkedin" src="linkedinIcon.png" alt="www.linkedin.com/in/zshaiken" style="width:50px;height:50px;"></a>
+		<a href="https://www.facebook.com/zshaiken"><img id="facebook" src="facebookIcon.png" alt="www.facebook.com/zshaiken" style="width50px;height:50px;"></a>
+		<a href="https://github.com/shaikezr"><img id="github" src="githubIcon.png" alt="www.github.com/shaikezr" style="width50px;height:50px;"></a>
 	</body>
 </html>
