--- a/sinopah.html
+++ b/sinopah.html
@@ -14,7 +14,7 @@
 		<div id="footer">
 			<div id="footerText">
 				<h1><a href="index.html">Mt. Sinopah</a></h1>
-				<p>Mt. Sinopah (8271 ft.) overlooks the west bank of Two Medicine Lake in Glacier National Park. This photograph was taken on an iPhone 4 from the south face of Rising Wolf Mountain (9514 ft.)</p>
+				<p><a href="https://goo.gl/zkTgvX">Mt. Sinopah (8271 ft.) overlooks the west bank of Two Medicine Lake in Glacier National Park. This photograph was taken on an iPhone 4 from the south face of Rising Wolf Mountain (9514 ft.)</a></p>
 			</div>
 		</div>
 	</body>
