--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 		<a href="https://www.linkedin.com/in/zshaiken"><img id="linkedin" src="linkedinIcon.png" alt="www.linkedin.com/in/zshaiken" style="width:50px;height:50px;"></a>
 		<a href="https://www.facebook.com/zshaiken"><img id="facebook" src="facebookIcon.png" alt="www.facebook.com/zshaiken" style="width50px;height:50px;"></a>
 		<a href="https://github.com/shaikezr"><img id="github" src="githubIcon.png" alt="www.github.com/shaikezr" style="width50px;height:50px;"></a>
-		<div id="test"><iframe src="https://vimeo.com/62850120"></iframe></div>
+		<div id="test"><iframe src="https://player.vimeo.com/video/62850120" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+<p><a href="https://vimeo.com/62850120">Break Edit</a> from <a href="https://vimeo.com/user17347279">zac shaiken</a> on <a href="https://vimeo.com">Vimeo</a>.</p></div>
 	</body>
 </html>
