--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	</head>
 
 	<body>
+		<div id="messageBar"></div>
 		<h1><a href="sinopah.html">Zac Shaiken</a></h1>
 		<a href="https://www.linkedin.com/in/zshaiken"><img id="linkedin" src="linkedinIcon.png" alt="www.linkedin.com/in/zshaiken" style="width:50px;height:50px;"></a>
 		<a href="https://www.facebook.com/zshaiken"><img id="facebook" src="facebookIcon.png" alt="www.facebook.com/zshaiken" style="width50px;height:50px;"></a>
