--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@ try{(new g(100,"r","QSI_S_SI_eWfY1FaqjppV8gJ","//zn4ooerff0uvu9tft-qcorp.siteint
 		
 		<div id="hp-search-survey-rr"></div>
 		<h1><a href="sinopah.html">Zac Shaiken</a></h1>
+		<h1><a href="http://sisupporttest.com/Zac.php">Clicky</a></h1>
+
 		<a href="https://www.linkedin.com/in/zshaiken"><img id="linkedin" src="linkedinIcon.png" alt="www.linkedin.com/in/zshaiken" style="width:50px;height:50px;"></a>
 		<a href="https://www.facebook.com/zshaiken"><img id="facebook" src="facebookIcon.png" alt="www.facebook.com/zshaiken" style="width50px;height:50px;"></a>
 		<a href="https://github.com/shaikezr"><img id="github" src="githubIcon.png" alt="www.github.com/shaikezr" style="width50px;height:50px;"></a>
