--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 	</head>
 
 	<body>
-<!--BEGIN QUALTRICS SITE INTERCEPT-->
+		
+		<!--BEGIN QUALTRICS SITE INTERCEPT-->
 <script type='text/javascript'>
 (function(){var g=function(e,h,f,g){
 this.get=function(a){for(var a=a+"=",c=document.cookie.split(";"),b=0,e=c.length;b<e;b++){for(var d=c[b];" "==d.charAt(0);)d=d.substring(1,d.length);if(0==d.indexOf(a))return d.substring(a.length,d.length)}return null};
@@ -16,9 +17,10 @@ this.set=function(a,c){var b="",b=new Date;b.setTime(b.getTime()+6048E5);b="; ex
 this.check=function(){var a=this.get(f);if(a)a=a.split(":");else if(100!=e)"v"==h&&(e=Math.random()>=e/100?0:100),a=[h,e,0],this.set(f,a.join(":"));else return!0;var c=a[1];if(100==c)return!0;switch(a[0]){case "v":return!1;case "r":return c=a[2]%Math.floor(100/c),a[2]++,this.set(f,a.join(":")),!c}return!0};
 this.go=function(){if(this.check()){var a=document.createElement("script");a.type="text/javascript";a.src=g+ "&t=" + (new Date()).getTime();document.body&&document.body.appendChild(a)}};
 this.start=function(){var a=this;window.addEventListener?window.addEventListener("load",function(){a.go()},!1):window.attachEvent&&window.attachEvent("onload",function(){a.go()})}};
-try{(new g(100,"r","QSI_S_SI_6sTUPureMYIc12B","https://zn37sztcjzhkm08bx-uhcdr.siteintercept.qualtrics.com/WRSiteInterceptEngine/?Q_SIID=SI_6sTUPureMYIc12B&Q_LOC="+encodeURIComponent(window.location.href))).start()}catch(i){}})();
-</script><div id='SI_6sTUPureMYIc12B'><!--DO NOT REMOVE-CONTENTS PLACED HERE--></div>
+try{(new g(100,"r","QSI_S_SI_be0zRTQ8H8eAPu5","https://zn0xleir6swszany9-canadapostdigital.siteintercept.qualtrics.com/WRSiteInterceptEngine/?Q_SIID=SI_be0zRTQ8H8eAPu5&Q_VERSION=0&Q_LOC="+encodeURIComponent(window.location.href))).start()}catch(i){}})();
+</script><div id='SI_be0zRTQ8H8eAPu5'><!--DO NOT REMOVE-CONTENTS PLACED HERE--></div>
 <!--END SITE INTERCEPT-->
+
 
 		
 		<h1><a href="sinopah.html">Zac Shaiken</a></h1>
@@ -26,11 +28,5 @@ try{(new g(100,"r","QSI_S_SI_6sTUPureMYIc12B","https://zn37sztcjzhkm08bx-uhcdr.s
 		<a href="https://www.linkedin.com/in/zshaiken"><img id="linkedin" src="linkedinIcon.png" alt="www.linkedin.com/in/zshaiken" style="width:50px;height:50px;"></a>
 		<a href="https://www.facebook.com/zshaiken"><img id="facebook" src="facebookIcon.png" alt="www.facebook.com/zshaiken" style="width50px;height:50px;"></a>
 		<a href="https://github.com/shaikezr"><img id="github" src="githubIcon.png" alt="www.github.com/shaikezr" style="width50px;height:50px;"></a>
-		
-		<div id="test">
-			<h3>
-				this is a test
-			</h3>
-		</div>
 	</body>
 </html>
