--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en-US">
 	<head>
-		<title>Zac Shaiken (Loaded)</title>
+		<title>Zac Shaiken (Loaded2)</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta charset="UTF-8">
 		<link rel="stylesheet" href="mainstyles.css"> 
 		<link href='https://fonts.googleapis.com/css?family=Amatic+SC:700' rel='stylesheet' type='text/css'>
 		<script>
+			function(){alert(window.innerHeight)}
+				
 			document.addEventListener("visibilitychange", function() {
 				alert( document.visibilityState );
 			});
