--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<meta charset="UTF-8">
 		<link rel="stylesheet" href="mainstyles.css"> 
 		<link href='https://fonts.googleapis.com/css?family=Amatic+SC:700' rel='stylesheet' type='text/css'>
+		<script src="jquery.exitintent.min.js"></script>
 	</head>
 
 	<body>
