--- a/codius.html
+++ b/codius.html
@@ -1,8 +1,15 @@
 <!DOCTYPE html>
-<html>
-<body>
+<html lang="en-US">
+	<head>
+		<title>Zac Shaiken (Loaded3)</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta charset="UTF-8">
+		<link rel="stylesheet" href="mainstyles.css"> 
+		<link href='https://fonts.googleapis.com/css?family=Amatic+SC:700' rel='stylesheet' type='text/css'>
 
-<h1>Codius host</h1>
+	</head>
 
-</body>
+	<body>
+		<h1>Codius Host</h1>
+	</body>
 </html>
